--- a/style.css
+++ b/style.css
@@ -210,11 +210,12 @@ nav{
    width: 100%;
    border-radius: 10px;
    display: block;
+   transition: transform 0.5s;
 }
 
 .layer{
    width: 100%;
-   height: 100%;
+   height: 0;
    background: linear-gradient(rgba(0,0,0,0.6) , #ff004f);
    border-radius: 10px;
    position: absolute;
@@ -228,6 +229,7 @@ nav{
    padding: 0 40px;
    text-align: center;
    font-size: 14px;
+   transition: height 0.5s;
 }
 .layer h3{
    font-weight: 500;
@@ -244,4 +246,91 @@ nav{
    height: 60px;
    border-radius: 50%;
    text-align: center;
+}
+.work:hover img{
+   transform: scale(-1.1);
+   
+}
+.work:hover .layer{
+   height: 100%;
+}
+
+.btn{
+   display: block;
+   width: fit-content;
+   padding: 14px 50px;
+   border-radius: 22px;
+   margin: 50px auto;
+   border: 2px solid #ff004f;
+   text-decoration: none;
+   color: #fff;
+   transition: background 0.3s;
+   transition: transform 0.5s;
+}
+.btn:hover{
+   background: #ff004f;
+   transform: scale( 1.1);
+}
+
+/* --------------------contact------------- */
+.contact-left{
+   flex-basis: 35%;
+}
+.contact-right{
+   flex-basis: 60%;
+}
+.contact-left p{
+   margin-top: 30px;
+}
+.contact-left p i{
+   color: #ff004f;
+   margin-right: 15px;
+   font-size: 25px;
+}
+
+.social-links{
+   margin-top: 30px;
+}
+.social-links a{
+   text-decoration: none;
+   font-size: 30px;
+   margin-right: 15px;
+   color: #ababab;
+   display: inline-block;
+   transition: transform 0.5s;
+}
+.social-links a:hover{
+   color: #ff004f;
+   transform: translateY(-5px);
+
+}
+.btn2{
+   display: inline-block;
+}
+
+.bt{
+   background-color: #ff004f;
+   color: #fff;
+}
+
+/* .contact-right {
+   width: 100%;
+} */
+.contact-right form{
+   width: 100%;
+}
+form input, form textarea{
+   width: 100%;
+   border: 0;
+   outline: none;
+   background: #262626;
+   padding: 15px;
+   margin: 15px 0;
+   color: #fff;
+   font-size: 15px;
+   border-radius: 6px;
+
+}
+.bt:hover{
+   cursor: pointer;
 }
