--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body{
     background-size: cover;
     background-position: center;
 }
+
+html {
+   scroll-behavior: smooth;
+}
 .container{
     padding: 10px 10%;
 }
